--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -11,8 +11,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  get-deploy-inputs:
+    name: Get Deploy Inputs
+    runs-on: [self-hosted, Linux, X64]
+    outputs:
+      trigger_source: ${{ steps.set-outputs.outputs.trigger_source }}
+    steps:
+      - name: Set outputs
+        id: set-outputs
+        run: echo "trigger_source=${{ format('PR <{0}|#{1}> merged by <{2}|{3}>', github.event.pull_request.html_url, github.event.pull_request.number, format('{0}/{1}', github.server_url, github.actor), github.actor) }}" >> $GITHUB_OUTPUT
+
   deploy:
     name: Deploy to Development Environment
+    needs: [get-deploy-inputs]
     if: github.event.pull_request.merged == true
     uses: ./.github/workflows/deploy.yml
     with:
@@ -20,7 +31,7 @@ jobs:
       bugsnag_release_stage: 'development'
       s3_dir_path: 'dev/latest/v3'
       s3_dir_path_legacy: 'dev/latest/v1.1'
-      action_type: ''
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_DEV_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_DEV_S3_BUCKET_NAME }}
@@ -32,10 +43,11 @@ jobs:
 
   deploy-sanity-suite:
     name: Deploy sanity suite
-    needs: deploy
+    needs: [get-deploy-inputs]
     uses: ./.github/workflows/deploy-sanity-suite.yml
     with:
       environment: 'development'
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_DEV_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_DEV_S3_BUCKET_NAME }}
@@ -51,8 +63,9 @@ jobs:
   run-e2e-regression-test-suites:
     uses: ./.github/workflows/run-e2e-regression-test-suites.yml
     name: Run E2E Regression Test Suites
-    needs: deploy-sanity-suite
+    needs: [get-deploy-inputs, deploy-sanity-suite, deploy]
     with:
       environment: development
+      trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
     secrets:
       PAT: ${{ secrets.PAT }}
