--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -19,8 +19,8 @@ jobs:
     runs-on: [self-hosted, Linux, X64]
     outputs:
       trigger_source: ${{ steps.set-outputs.outputs.trigger_source }}
-      release_version: ${{ steps.extract-release-info.outputs.version }}
-      release_ticket: ${{ steps.extract-release-info.outputs.ticket }}
+      release_version: ${{ steps.extract-release-info.outputs.release_version }}
+      release_ticket_id: ${{ steps.extract-release-info.outputs.release_ticket_id }}
     steps:
       - name: Set outputs
         id: set-outputs
@@ -40,8 +40,8 @@ jobs:
           echo "Extracted version: $version"
           echo "Extracted ticket: $ticket"
           
-          echo "version=$version" >> $GITHUB_OUTPUT
-          echo "ticket=$ticket" >> $GITHUB_OUTPUT
+          echo "release_version=$version" >> $GITHUB_OUTPUT
+          echo "release_ticket_id=$ticket" >> $GITHUB_OUTPUT
 
   deploy:
     name: Deploy to staging environment
@@ -58,7 +58,7 @@ jobs:
       use_pr_head_sha: 'true'
       trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
       monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
-      release_ticket: ${{ needs.get-deploy-inputs.outputs.release_ticket }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_STAGING_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_STAGING_S3_BUCKET_NAME }}
@@ -77,7 +77,7 @@ jobs:
       use_pr_head_sha: 'true'
       trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
       monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
-      release_ticket: ${{ needs.get-deploy-inputs.outputs.release_ticket }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_STAGING_ACCOUNT_ID }}
       AWS_S3_BUCKET_NAME: ${{ secrets.AWS_STAGING_S3_BUCKET_NAME }}
@@ -99,6 +99,6 @@ jobs:
       trigger_source: ${{ needs.get-deploy-inputs.outputs.trigger_source }}
       use_pr_head_sha: 'true'
       monorepo_release_version: ${{ needs.get-deploy-inputs.outputs.release_version }}
-      release_ticket: ${{ needs.get-deploy-inputs.outputs.release_ticket }}
+      release_ticket_id: ${{ needs.get-deploy-inputs.outputs.release_ticket_id }}
     secrets:
       PAT: ${{ secrets.PAT }}
