--- a/.github/workflows/run-e2e-regression-test-suites.yml
+++ b/.github/workflows/run-e2e-regression-test-suites.yml
@@ -22,7 +22,7 @@ on:
       monorepo_release_version:
         type: string
         required: false
-      release_ticket:
+      release_ticket_id:
         type: string
         required: false
     secrets:
